add http request

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <div id="container"></div>
   <script src="./index.js"></script>
 </body>
 </html>
