add user search

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <h2>Githubリポジトリ検索サービス</h2>
+  <input type="text" id= "textForm" name="keyword" size="30" maxlesngth="20">
+  <button id="button">決定</button>
+  <!-- <input type="submit" value="決定"> -->
   <div id="container"></div>
   <script src="./index.js"></script>
 </body>
