--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="b5bedc2360a9a8c59f00fccd1fe47344.css">
-<script src="b5bedc2360a9a8c59f00fccd1fe47344.js"></script></head>
+</head>
 <body>
   <h2>Githubリポジトリ検索サービス</h2>
   <input type="text" id="textForm" name="keyword" size="30" maxlesngth="20">
   <button id="button">決定</button>
+  <!-- <input type="submit" value="決定"> -->
   <div id="container"></div>
+  <script src="intern.js"></script>
 </body>
 </html>
