--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="b5bedc2360a9a8c59f00fccd1fe47344.css">
 </head>
 <body>
