--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
   <h2>Githubリポジトリ検索サービス</h2>
-  <input type="text" id= "textForm" name="keyword" size="30" maxlesngth="20">
-  <button id="button">決定</button>
+  <input type="text" id= "textForm" name="keyword" maxlesngth="20">
+  <button id="submit">決定</button>
   <!-- <input type="submit" value="決定"> -->
   <div id="container"></div>
   <script src="./index.js"></script>
