--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h2>Githubリポジトリ検索サービス</h2>
-  <input type="text" id= "textForm" name="keyword" maxlesngth="20">
+  <input type="text" id= "textForm" name="keyword" maxlesngth="20"><br>
   <button id="submit">決定</button>
   <!-- <input type="submit" value="決定"> -->
   <div id="container"></div>
