--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<html>
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/dist/10a63be27d3d2fb11ff7e253a6c046f1.css">
-<script src="/dist/10a63be27d3d2fb11ff7e253a6c046f1.js"></script></head>
-<body>
-  <h2>Githubリポジトリ検索サービス</h2>
-  <input type="text" id="textForm" name="keyword" maxlesngth="20"><br>
-  <button id="submit">決定</button>
-  <div id="container"></div>
-  <script src="/dist/github-search-repository.js"></script>
-</body>
-</html>
+<html> <head> <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" type="text/css" href="10a63be27d3d2fb11ff7e253a6c046f1.css"> </head> <body> <h2>Githubリポジトリ検索サービス</h2> <input id="textForm" name="keyword" maxlesngth="20"><br> <button id="submit">決定</button> <div id="container"></div> <script src="github-search-repository.js"></script> </body> </html> 
